[gd_scene load_steps=17 format=2]

[ext_resource path="res://play_system_button_hl.png" type="Texture" id=1]
[ext_resource path="res://play_sound_button.png" type="Texture" id=2]
[ext_resource path="res://Metronome.wav" type="AudioStream" id=3]
[ext_resource path="res://play_sound_button_hl.png" type="Texture" id=4]
[ext_resource path="res://play_system_button.png" type="Texture" id=5]
[ext_resource path="res://lcd.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://bpm_sync.gd" type="Script" id=7]
[ext_resource path="res://mus_testSong.ogg" type="AudioStream" id=8]
[ext_resource path="res://note_accent.png" type="Texture" id=9]
[ext_resource path="res://spr_receptor.png" type="Texture" id=10]
[ext_resource path="res://movementTest.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 2
outline_color = Color( 0.588235, 0.886275, 0.435294, 0.239216 )
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=3]
resource_name = "Hit"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8 ]
}

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 6 )

[node name="BPMSync" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 106.895
margin_top = 360.0
margin_right = 914.895
margin_bottom = 421.0
custom_colors/font_color = Color( 0.552941, 0.984314, 0.501961, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Player" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -3.714

[node name="PlaySystem" type="TextureButton" parent="."]
margin_left = 424.0
margin_top = 192.0
margin_right = 552.0
margin_bottom = 320.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlaySound" type="TextureButton" parent="."]
margin_left = 424.0
margin_top = -536.0
margin_right = 552.0
margin_bottom = -408.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SprReceptor" type="Sprite" parent="."]
position = Vector2( 480, 448 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )
hframes = 9
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="SprReceptor"]
playback_speed = 1.8
anims/Hit = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="NoteAccent" type="Sprite" parent="."]
visible = false
position = Vector2( 480, 496 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="Node2D" parent="." instance=ExtResource( 11 )]
position = Vector2( 208, 296 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_right = 360.0
margin_bottom = 104.0
custom_fonts/normal_font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PlaySystem" to="." method="_on_PlaySystem_pressed"]
[connection signal="pressed" from="PlaySound" to="." method="_on_PlaySound_pressed"]
